--- a/movie.css
+++ b/movie.css
@@ -22,6 +22,7 @@ nav .name{
     align-items: center;
     font-size: 18px;
     font-weight: 600;
+    cursor: pointer;
 }
 #search{
     background-color: lightblue;
